# GUI-OS-AI-Agent-Benchmarking

./: .envrc.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  notebook.ipynb  pyproject.toml  requirements.txt  results.py  run-benchmark.sh
.github/workflows/: ci-cd.yaml  lint_pr.yaml  release.yaml  test.yaml
Spider2-V/: .gitignore  README.md  lib_run_single.py  run_spider2v_agent.py
Spider2-V/desktop_env/envs/: desktop_env.py
Spider2-V/desktop_env/evaluators/metrics/: __init__.py  general.py
Spider2-V/evaluation_examples/: test_all.json  test_one.json
Spider2-V/mm_agents/: agent.py
Spider2-V/mm_agents/prompt_templates/: observation_prompt.py
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/040af931-8371-4765-9908-2a36ff4e4518/: trajectory.jsonl
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/040af931-8371-4765-9908-2a36ff4e4518/a11y_trees/: step_10_20250623@215734.txt  step_11_20250623@215821.txt  step_12_20250623@215913.txt  step_13_20250623@220011.txt  step_14_20250623@220102.txt  step_15_20250623@220147.txt  step_1_20250623@214955.txt  step_2_20250623@215047.txt  step_3_20250623@215133.txt  step_4_20250623@215220.txt  step_5_20250623@215307.txt  step_6_20250623@215401.txt  step_7_20250623@215456.txt  step_8_20250623@215552.txt  step_9_20250623@215644.txt
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/b09a0441-20b3-45f1-966a-4d521e46c7ea/: trajectory.jsonl
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/b09a0441-20b3-45f1-966a-4d521e46c7ea/a11y_trees/: step_10_20250623@221037.txt  step_11_20250623@221115.txt  step_12_20250623@221152.txt  step_13_20250623@221226.txt  step_14_20250623@221304.txt  step_15_20250623@221341.txt  step_1_20250623@220515.txt  step_2_20250623@220541.txt  step_3_20250623@220610.txt  step_4_20250623@220644.txt  step_5_20250623@220714.txt  step_6_20250623@220747.txt  step_7_20250623@220840.txt  step_8_20250623@220919.txt  step_9_20250623@220957.txt
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/e1da7d3d-2830-4376-a994-36cf53852303/: trajectory.jsonl
Spider2-V/results/pyautogui_som_o4-mini-2025-04-16_ef/jupyter/e1da7d3d-2830-4376-a994-36cf53852303/a11y_trees/: step_10_20250623@222156.txt  step_11_20250623@222237.txt  step_13_20250623@222355.txt  step_14_20250623@222431.txt  step_15_20250623@222521.txt  step_1_20250623@221546.txt  step_2_20250623@221629.txt  step_3_20250623@221710.txt  step_4_20250623@221759.txt  step_5_20250623@221847.txt  step_7_20250623@222007.txt  step_8_20250623@222052.txt
docs/: .excalidraw
docs/extensions/: dev_ops.excalidrawlib
eda/: eda_benchmark.py  notebook.ipynb
src/: check-script.sh  cli.py  orchestrator.py  port_pool.json  run_benchmark.py
src/agent/: README.md  __init__.py  executor.py  logger.py  sandbox_agent.py
src/agent/tools/: callbacks.py  gui.py  rag.py
src/agent/tools/gui_actor/: README.md  constants.py  dataset.py  inference.py  modeling.py  modeling_qwen25vl.py  pyproject.toml  trainer.py  utils.py
src/agent/tools/models/gui_actor/: dataset.py  inference.py  trainer.py  utils.py
src/benchmark/: README.md  __init__.py  configuration.py  general.py  jupyter.py  orchestrator.py  table.py  task.py  utils.py
src/benchmark/evaluation_examples/: README.md  recovery.json  test_five.json  test_jupyter.json  test_one.json
src/benchmark/evaluation_examples/documents/: README.md
src/benchmark/evaluation_examples/examples/jupyter/00b43a0a-b17b-475d-a482-302efe94d4cc/: 00b43a0a-b17b-475d-a482-302efe94d4cc.json  Athletes_summer_games.csv  init.sh  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.html  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.md  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.txt  verbose_instruction.txt
src/benchmark/evaluation_examples/examples/jupyter/040af931-8371-4765-9908-2a36ff4e4518/: 040af931-8371-4765-9908-2a36ff4e4518.json  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.html  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.md  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.txt
src/benchmark/evaluation_examples/examples/jupyter/1f16fbd5-cdf3-4cb2-b02b-9c31f11cc77d/: 1f16fbd5-cdf3-4cb2-b02b-9c31f11cc77d.json  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.html  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.md  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.txt  script.py  tensor_gold.ipynb
src/benchmark/evaluation_examples/examples/jupyter/1fe7d03d-d0d5-465b-987d-4583af499387/: 1fe7d03d-d0d5-465b-987d-4583af499387.json  AdaBoost.ipynb  init.sh  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.html  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.md  retrieved_chunk_size_512_chunk_overlap_20_topk_4_embed_bge-large-en-v1.5.txt
src/benchmark/tasks/: __init__.py  configuration.py  task.py
src/benchmark/tasks/eval/: general.py  jupyter.py  table.py
src/docker/: .gitignore  1-os-configuration.sh  2-python-configuration.sh  3-startup-servers.sh  4-jupyter-kernel-gateway.sh  5-fastapi-observation-server.sh  README.md  base_download.py  base_upload.py  compose.qemu.yaml
src/docker/observation-server/: main.py  pyproject.toml
src/docker/observation-server/src/: pyxcursor.py  recording.py  utils.py
src/prompts/: task.yaml
src/results/jupyter/a4773fa9-c715-4293-8774-e99caa9d8e7c/: full_run_log.html  summary.json
src/sandbox/: README.md  __init__.py  configs.py  errors.py  sandbox.py  ssh.py  virtualmachine.py
src/tests/: agent-callback.py  agent-sandbox-executor.py  create-snapshot.py  gui-models.py  notebook.ipynb  sandbox-client.py  sandbox-executor.py  sandbox-jupyter.py  sandbox-ssh.py  test_script.sh
src/tests/test_results/SandboxCodeAgent/test-chromium-5c78cefd/: summary.json
src/tests/test_results/SandboxCodeAgent/test-wikipedia-ebb72f5f/: summary.json
(+220 files in other folders)
