# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automating-ds-de-workflows"
version = "0.2.0"
description = "Master Thesis Project: Automating (Data Science & Engineering) Workflows with AI Agents"
readme = "README.md"
requires-python = ">=3.11"

# Classifiers must be inside the [project] table.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Main project dependencies
dependencies = [
    "pillow",
    "ipykernel",
    "ipywidgets",
    "docker",
    "paramiko",
    "tenacity",
    "pandas",
    "websocket-client",
    "huggingface-hub[cli]",
    "num2words",
    "litellm",
    "nbformat",
    "scikit-image",
    "scikit-learn",
    "formulas",
    "lxml",
    "rapidfuzz",
    "smolagents[litellm,telemetry,toolkit]==1.18.0",
    "opencv-python",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "transformers==4.51.3",
    "accelerate>=1.7.0",
    "qwen-vl-utils==0.0.8",
    "datasets>=3.6.0",
    "nbconvert>=7.16.6",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "pyyaml>=6.0.2",
]

# Optional dependencies (for dev, test, etc.) use the standard 'project.optional-dependencies' table.
[project.optional-dependencies]
dev = ["ruff", "pytest", "pyright", "commitizen", "pre-commit>=4.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pyright]
exclude = ["src/agent/tools", "src/docker/observation-server"]
include = ["src"]
venvPath = "."
venv = ".venv"


[tool.ruff]
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/agent/tools/models/",
    "src/benchmark/evaluation_examples",
    "src/docker/observation-server",
]
# In addition to the standard set of inclusions, include `.ipynb` files.
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
